@@ -42,6 +42,7 @@
  --btn-hover-color:rgba(184, 184, 184, 0.4)!important;
  --popup-background-color:#f6f5f4;
  --popup-border-color:var(--list-item-border-color);
+ scrollbar-color:var(--scrollbar-thumb-color) var(--scrollbar-track-color);
 }
 
 .np-info-cover {
