@@ -41,6 +41,7 @@
  --popup-background-color:#323232;
  --popup-border-color:var(--sub-toolbar-border-color);
  --popup-divider-color:var(--scrollbar-thumb-color);
+ scrollbar-color:var(--scrollbar-thumb-color) var(--scrollbar-track-color);
 }
 
 .np-info-cover {
